# deep_kit

./: .gitignore  LICENSE  README.md  pyrightconfig.json  setup.cfg
src/deep_kit/: main.py  utils.py
src/deep_kit/cfgs/: base.yml  collect_cfg.py
src/deep_kit/experimenters/: operator.py  trainer.py
