[metadata]
name = deep_kit
version = 1.0
author = Xin Wang
author_email = xinwang.git@outlook.com
description = A tool box for deep learning experiments.
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls = 
    Documentation = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: OS Independent

[options]
package_dir = 
    = src
pachages = find:
python_requires = >=3.10
install_requires =
    rich
    omegaconf
    pandas
    matplotlib
    tensorboard

[options.packages.find]
where = src
